<resources>
    <string name="app_name">ACT3 Simple Article Management</string>
    <string name="delete">Delete</string>
    <string name="price" translatable="false">%1$s€</string>
    <string name="code_label">Code:</string>
    <string name="stock_label">Stock:</string>
    <string name="price_label">Price:</string>
    <string name="description_label">Description:</string>
    <string name="family">Family:</string>
    <string name="add_article">Add Article</string>
    <string name="database_name">Articles</string>
    <string name="code_empty">Code can\'t be empty</string>
    <string name="code_exists">Code already exists</string>
    <string name="stock_invalid">Stock must be a positive number or zero</string>
    <string name="price_invalid">Price must be a positive number or zero</string>
    <string name="description_empty">Description can\'t be empty</string>
    <string name="invalid_data">Invalid data</string>
    <string name="delete_confirmation">Are you sure you want to delete this article?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="article_code">articleCode</string>
    <string name="article_deleted">Article deleted</string>
    <string name="software">SOFTWARE</string>
    <string name="hardware">HARDWARE</string>
    <string name="other">OTHER</string>
    <string name="dot" translatable="false">.</string>
    <string name="coma" translatable="false">,</string>
    <string name="edit_article">Edit Article: %1$s</string>
    <string name="update_article">Update Article</string>
    <string name="articles">Articles</string>
    <string name="filter">Filter</string>
    <string name="all_stock">All Stock</string>
    <string name="positive_stock">Positive Stock</string>
    <string name="zero_stock">Zero Stock</string>
    <string name="negative_stock">Negative Stock</string>
    <string name="by_description">By description</string>
    <string name="write_a_phrase_to_filter_the_description">Write a phrase to filter the description:</string>
    <string name="phrase">Phrase</string>
    <string name="submit">Submit</string>
</resources>