<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/MIAdd"
        android:icon="@drawable/baseline_add_24"
        android:title=""
        app:showAsAction="always" />
    <item
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/GStock"
                android:checkableBehavior="all">
                <item
                    android:id="@+id/MIAllStock"
                    android:checkable="true"
                    android:checked="true"
                    android:enabled="true"
                    android:title="@string/all_stock" />
                <item
                    android:id="@+id/MIPositiveStock"
                    android:checkable="true"
                    android:checked="true"
                    android:enabled="true"
                    android:title="@string/positive_stock" />
                <item
                    android:id="@+id/MIZeroStock"
                    android:checkable="true"
                    android:checked="true"
                    android:enabled="true"
                    android:title="@string/zero_stock" />
                <item
                    android:id="@+id/MINegativeStock"
                    android:checkable="true"
                    android:checked="true"
                    android:enabled="true"
                    android:title="@string/negative_stock" />
            </group>
            <item
                android:id="@+id/MIDescription"
                android:checkable="false"
                android:enabled="true"
                android:title="@string/by_description" />
        </menu>
    </item>
</menu>