<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutMWV" >

    <TextView
        style="@style/TextViewTitleDialog"
        android:text="@string/write_a_phrase_to_filter_the_description"
        android:id="@+id/TVTitleDialog"
        />

    <EditText
        style="@style/EditTextDialog"
        android:id="@+id/ETDataDialog"
        android:inputType="text"
        android:hint="@string/phrase"
        />


    <LinearLayout
        style="@style/LinearLayoutMMH">

        <Button
            style="@style/ButtonCancelDialog"
            android:id="@+id/ButtonCancelDialog"
            />

        <Button
            style="@style/ButtonSubmitDialog"
            android:text="@string/submit"
            android:id="@+id/ButtonSubmitDialog"
            />

    </LinearLayout>
</LinearLayout>