<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutMM"
    tools:context=".AddArticleActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GAddArticleColumn01"
        style="@style/Column"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GAddArticleColumn02"
        style="@style/Column"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GAddArticleRow01"
        style="@style/Row"
        app:layout_constraintGuide_percent="0.85" />

    <ScrollView
        android:id="@+id/SVAddForm"
        style="@style/Layout00"
        app:layout_constraintBottom_toTopOf="@+id/GAddArticleRow01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/LayoutMW">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/GAddColumn01"
                style="@style/Column"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/GAddColumn02"
                style="@style/Column"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/TVAddCode"
                style="@style/AddFormLabel"
                android:labelFor="@id/ETAddCode"
                android:text="@string/code_label"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ETAddCode"
                style="@style/AddFormInput"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/TVAddCode"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/TVAddStock"
                style="@style/AddFormLabel"
                android:labelFor="@id/ETAddStock"
                android:text="@string/stock_label"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/ETAddCode" />

            <EditText
                android:id="@+id/ETAddStock"
                style="@style/AddFormInput"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/TVAddStock"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/TVAddPrice"
                style="@style/AddFormLabel"
                android:labelFor="@id/ETAddPrice"
                android:text="@string/price_label"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/ETAddStock" />

            <EditText
                android:id="@+id/ETAddPrice"
                style="@style/AddFormInput"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/TVAddPrice"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/TVAddFamily"
                style="@style/AddFormLabel"
                android:labelFor="@id/ETAddFamily"
                android:text="@string/family"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/ETAddPrice" />

            <EditText
                android:id="@+id/ETAddFamily"
                style="@style/AddFormInput"
                android:inputType="textCapCharacters"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/TVAddFamily"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/TVAddDescription"
                style="@style/AddFormLabel"
                android:labelFor="@id/ETAddDescription"
                android:text="@string/description_label"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/ETAddFamily" />

            <EditText
                android:id="@+id/ETAddDescription"
                style="@style/AddFormInputDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/GAddColumn02"
                app:layout_constraintStart_toStartOf="@+id/GAddColumn01"
                app:layout_constraintTop_toBottomOf="@id/TVAddDescription"
                tools:ignore="Autofill" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/BAddSubmit"
        style="@style/Layout00"
        android:text="@string/add_article"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GAddArticleColumn02"
        app:layout_constraintStart_toEndOf="@+id/GAddArticleColumn01"
        app:layout_constraintTop_toBottomOf="@+id/SVAddForm" />
</androidx.constraintlayout.widget.ConstraintLayout>